cmake_minimum_required(VERSION 3.13)

set(This RawSocketSniffer)

project(${This} C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(OPTIMIZATION_RELEASE "-O2")
set(CMAKE_C_FLAGS_RELEASE " ${OPTIMIZATION_RELEASE}  ")
set(CMAKE_CXX_FLAGS_RELEASE " ${OPTIMIZATION_RELEASE} ")
set(CMAKE_BUILD_TYPE Debug)

file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "./src/**.cpp")

file(GLOB_RECURSE INCLUDES RELATIVE ${CMAKE_SOURCE_DIR} "./src/**.hh")


add_executable(${This} ${SOURCES} ${INCLUDES})